--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <link data-th-href="@{/css/main.css?{id}(id=${timestamp})}" rel="stylesheet">
-    <title>Hello Docker + Spring Boot</title>
+    <title>Hello Docker + Spring Boot + Helm + Kubernetes</title>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="www.coachdevops.com">coachdevops.com</div></a>
+    <a class="navbar-brand" href="www.coachdevops.com">https://www.coachdevops.com</div></a>
 </nav>
 
 <main role="main" class="container">
