--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="www.coachdevops.com">https://www.coachdevops.com</div></a>
+    <a class="navbar-brand" href="www.coachdevops.com">https://www.cidevops.com</div></a>
 </nav>
 
 <main role="main" class="container">
